# NextBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  bot_test.py  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
core/: admin.py  admin_actions.py  signals.py  urls.py  views.py
core/admin/: __init__.py  car_admin.py  fuelrecord_admin.py  region_admin.py  systemlog_admin.py  user_admin.py  zone_admin.py
core/clients/: element_car_client.py  google_sheets_client.py
core/management/commands/: archive_empty_regions.py  car_age_report.py  check_element_data.py  create_superuser.py  export_data.py  import_users_from_xlsx.py  initdemo.py  runbot.py  sync_cars_with_element.py  sync_fuel_to_gsheets.py
core/migrations/: 0001_initial.py  0002_alter_fuelrecord_notes.py  0003_alter_user_phone.py
core/models/: __init__.py  car.py  fuel.py  region.py  system_log.py  user.py  zone.py
core/refuel_bot/: __init__.py  main.py
core/refuel_bot/handlers/: __init__.py  start.py  (+2 more)
core/services/: __init__.py  car_service.py  export_service.py  google_sheets_service.py  region_service.py
core/templates/: 403.html  404.html  500.html
core/utils/: logging.py  network.py
docker/: Dockerfile.bot  Dockerfile.dev  Dockerfile.prod
nextbot/: asgi.py  settings.py  urls.py  wsgi.py
nextbot/settings/: __init__.py  base.py  dev.py  logging_conf.py  prod.py
nginx/conf.d/: default.conf
scripts/: deploy.sh  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  init.sh  wait-for-db.py
traefik/: dynamic.yml
(+15 files in other folders)
